[package]
name = "sbchild-blog-web"
version = "0.1.0"
authors = ["sbchild <sbchild0@gmail.com>"]
edition = "2021"
license = "MPL-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "*"
sbchild-blog = { path = "../" }
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "*"

# [profile.release]
# inherits = "release"
# opt-level = "s"
# strip = "debuginfo"
